--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -5,7 +5,7 @@
 	<title>Home</title>
 	
 	<head th:fragment="css">
-		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<title th:text= "${title}"></title>
 	</head>
 	
 	<head th:fragment="js">
