--- a/src/main/resources/templates/update-dealer.html
+++ b/src/main/resources/templates/update-dealer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Update Dealer</title>
+		<title th:replace="fragments/fragment :: title"></title>
 		<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 		<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
@@ -18,7 +18,7 @@
 	  	<input type="text" name="alamat" th:value="${dealer.alamat}"/>
 	  	<br>
 	  	No. Telp: <br>
-	 	 <input type="text" name="noTelp" th:value="${dealer.noTelp}"/>
+	 	<input type="text" name="noTelp" th:value="${dealer.noTelp}"/>
 	  	<br><br>
 	  	<button type="submit">Submit</button>
 	</form>
