--- a/src/main/resources/templates/view-dealer.html
+++ b/src/main/resources/templates/view-dealer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>View Dealer</title>
+		<title th:replace="fragments/fragment :: title"></title>
 		<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 		<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 	</head> 
@@ -45,6 +45,7 @@
    		</form>
    		<br>
    		<form th:action="@{/car/add/} + ${dealer.id}">
+   		<button value="submit">Tambah Mobil</button>
 		</form>
 	</body>
 </html>
