--- a/src/main/resources/templates/viewall-dealer.html
+++ b/src/main/resources/templates/viewall-dealer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>View All Dealer</title>
+		<title th:replace="fragments/fragment :: title"></title>
 		<object th:include="fragments/fragment :: css" th:remove="tag"></object>
 		<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 	</head>
@@ -24,7 +24,7 @@
        				<td th:text="${listCar.amount}"></td>
    				</tr>
    			</table>
-   			<h3>=============================================</h3>
+   			<h3>= = = = = = = = = = = = = = = = = = = = = = = = = = </h3>
    		</div>
    		<a th:href="@{/}">Kembali</a>
 	</body>
